# litton-tools

./: CMakeLists.txt  README.md
Arduino/: README.md
Arduino/Litton-Emulator/: Litton-Emulator.ino  litton-device.c  litton-drum.c  litton-front-panel.c  litton-opus.h  litton-run.c  litton-state.c
Arduino/Litton-Emulator/litton/: litton.h
OPUS/: README.md  convert.sh  opus-annotated.txt  opus.drum  whole.drum
OPUS/dump/: README.md
doc/: Litton-Part-Locator.ods  Litton-Part-Number-Mapping.ods  assembler-high-level.md  assembler-low-level.md  character-set.md  devices.md  drum-image-format.md  precession.md  tape-format.md  tracks.md
examples/: Makefile  echo.drum  echo.las  fibonacci.drum  fibonacci.las  hello.drum  hello_world.drum  hello_world.las  hello_world.tape  hello_world_pointers.drum  hello_world_pointers.las  hellorld.drum  hellorld.las  hellorld.tape  mandelbrot.drum  mandelbrot.las  mandelbrot.tape  math_fragments.drum  math_fragments.las
examples/high-level/: README.md  echo.tape  hellorld.tape  print-tape.tape
examples/low-level/: Makefile  echo.las  fibonacci.las  fibonacci.tape  hellorld.drum  life1d.drum  life1d.las  life1d.tape  mandelbrot.drum  mandelbrot.las  mandelbrot.tape  math_fragments.las
fonts/: README.md
images/: Makefile  front-panel.xcf  keyboard-layout.xcf
include/litton/: litton-hl.h  litton.h
src/: CMakeLists.txt  litton_state.c
src/assembler/: assem.c  assem.h  drum-image.c  drum-image.h  main.c  symbol.c  symbol.h  tokeniser.c  tokeniser.h
src/core/: litton-device.c  litton-drum.c  litton-front-panel.c  litton-hl-opcodes.c  litton-opcodes.c  litton-opus.h  litton-run.c  litton-state.c
src/disassembler/: main.c
src/emulator/: main.c
src/emulator-sdl/: font-dotmatrix.c  images.h  img-background.c  img-buttons.c  img-control-down.c  img-control-up.c  img-knob-A0.c  img-knob-A16.c  img-knob-A24.c  img-knob-A32.c  img-knob-A8.c  img-knob-I0.c  img-knob-I16.c  img-knob-I24.c  img-knob-I32.c  img-knob-I8.c  img-lamps.c  main.c
tapes/: 102testtape.tape  132III-C.tape  README.md  blackjack.tape  dpma.tape  duptape.tape  f15pt.tape  lucy.tape  lucy.txt
test/: CMakeLists.txt  README.md  add.las
tools/: README.md  convert-tape.py  convert-track.py  extract-data.py  plot-csv.py  tape-to-punchable.py
